--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -49,7 +49,6 @@
 	</style>
 
 
-
 	<!-- tabs text -->
 	<style name="tab_text_36sp" parent="TextAppearance.Design.Tab">
 		<item name="android:fontFamily">@font/rubik_regular</item>
@@ -58,16 +57,21 @@
 		<item name="android:textSize">36sp</item>
 	</style>
 
+	<!-- medium profile blocks headers -->
+	<style name="medium_text_white_22sp_85op" parent="Widget.AppCompat.TextView">
+		<item name="android:fontFamily">@font/rubik_medium</item>
+		<item name="android:textColor">@color/white_85</item>
+		<item name="android:textSize">22sp</item>
+	</style>
 
-
-	<!-- header 2 -->
+	<!-- regular header 2 -->
 	<style name="regular_text_white_24sp_85op" parent="Widget.AppCompat.TextView">
 		<item name="android:fontFamily">@font/rubik_regular</item>
 		<item name="android:textColor">@color/white_85</item>
 		<item name="android:textSize">24sp</item>
 	</style>
 
-	<!-- header 3 -->
+	<!-- regular header 3 -->
 	<style name="regular_text_white_20sp_85op" parent="Widget.AppCompat.TextView">
 		<item name="android:fontFamily">@font/rubik_regular</item>
 		<item name="android:textColor">@color/white_85</item>
@@ -90,7 +94,7 @@
 
 	</style>
 
-
+	<!-- cards container loading description helper -->
 	<style name="regular_text_white_18sp_85op" parent="Widget.AppCompat.TextView">
 		<item name="android:fontFamily">@font/rubik_regular</item>
 		<item name="android:textColor">@color/white_85</item>
@@ -128,8 +132,9 @@
 	<style name="regular_text_white_14sp_85op" parent="Widget.AppCompat.TextView">
 		<item name="android:fontFamily">@font/rubik_regular</item>
 		<item name="android:textColor">@color/white_85</item>
-		<item name="android:textSize">16sp</item>
+		<item name="android:textSize">14sp</item>
 	</style>
+
 
 
 
