multiple photos view added to profile view (tablayout + viewpager2)

--- a/app/src/main/res/layout/fragment_feed.xml
+++ b/app/src/main/res/layout/fragment_feed.xml
@@ -44,7 +44,7 @@
 
 
 	<androidx.viewpager2.widget.ViewPager2
-		android:id="@+id/viewPager"
+		android:id="@+id/feed_vp"
 		android:layout_width="0dp"
 		android:layout_height="0dp"
 		android:overScrollMode="never"
