--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,6 +2,7 @@
 
 	<!-- Base application theme. -->
 	<style name="AppTheme" parent="Theme.AppCompat.DayNight">
+
 		<item name="actionOverflowMenuStyle">@style/overFlowMenuStyle</item>
 
 		<!-- Customize your theme here. -->
@@ -24,6 +25,9 @@
 
 	<style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 	<style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Dark" />
+	<style name="AppTheme.NavigationView" parent="Widget.Design.NavigationView">
+		<item name="textAppearanceListItem">@style/regular_text_white_16sp_85op</item>
+	</style>
 
 	<style name="menuPopupStyle" parent="Widget.AppCompat.PopupMenu">
 		<item name="android:itemBackground">@color/colorAccentDark</item>
@@ -43,9 +47,7 @@
 		<item name="android:windowExitAnimation">@anim/alert_exit</item>
 	</style>
 
-	<style name="AppTheme.NavigationView" >
-		<item name="textAppearanceListItem">@style/regular_text_white_16sp_85op</item>
-	</style>
+
 
 
 
