--- a/app/src/main/res/menu/navigation_items.xml
+++ b/app/src/main/res/menu/navigation_items.xml
@@ -3,9 +3,9 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_messages"
+            android:id="@+id/nav_activities"
             android:icon="@drawable/nav_items_post_icon"
-            android:title="Inbox" />
+            android:title="Activities" />
 
         <item
             android:id="@+id/nav_feed"
