added fab & gradient to show white text on white avatars

--- a/app/src/main/res/drawable/gradient_transparent.xml
+++ b/app/src/main/res/drawable/gradient_transparent.xml
@@ -3,6 +3,7 @@
 	<gradient
 		android:angle="270"
 		android:startColor="#0012121A"
-		android:endColor="@color/colorPrimaryDark"/>
+		android:endColor="#8012121A"/>
+
 
 </shape>
