--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -111,5 +111,14 @@
 
 	</androidx.core.widget.NestedScrollView>
 
+	<com.google.android.material.floatingactionbutton.FloatingActionButton
+		android:id="@+id/fab_send_message"
+		android:layout_height="wrap_content"
+		android:layout_width="wrap_content"
+		android:layout_margin="@dimen/general_margin_16"
+		android:src="@drawable/ic_profile_send_message_24dp"
+		app:backgroundTint="@color/amethyst"
+		app:layout_anchor="@id/profile_app_bar"
+		app:layout_anchorGravity="bottom|right|end" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
