--- a/app/src/main/res/layout/fragment_profile_pager_item.xml
+++ b/app/src/main/res/layout/fragment_profile_pager_item.xml
@@ -1,10 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ImageView
-	android:id="@+id/profile_user_pic"
+<FrameLayout
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
 	android:background="@drawable/gradient_transparent"
-	android:scaleType="centerCrop"
-	android:contentDescription="@string/description_user_photo"
-	xmlns:android="http://schemas.android.com/apk/res/android"
-	/>
+	xmlns:android="http://schemas.android.com/apk/res/android">
+
+	<ImageView
+		android:id="@+id/profile_user_pic"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		android:background="@color/colorPrimaryDark"
+		android:scaleType="centerCrop"
+		android:src="@drawable/default_avatar"
+		android:contentDescription="@string/description_user_photo"
+		/>
+
+	<ImageView
+		android:id="@+id/profile_user_gradient"
+		android:layout_width="match_parent"
+		android:layout_height="100dp"
+		android:layout_gravity="bottom"
+		android:scaleType="centerCrop"
+		android:src="@drawable/gradient_transparent"
+		android:contentDescription="@string/description_user_photo"
+		/>
+
+</FrameLayout>
