--- a/app/src/main/res/layout/fragment_feed_rv_item.xml
+++ b/app/src/main/res/layout/fragment_feed_rv_item.xml
@@ -33,8 +33,8 @@
 				android:layout_height="32dp"
 				android:layout_gravity="center"
 				android:layout_margin="@dimen/card_content_margin_8"
-				android:src="@drawable/default_avatar"
-				app:circleImage="@{feedItem.feedPublisherPhotoId}"
+				android:src="@{feedItem.feedPublisherPhotoId}"
+
 				app:layout_constraintStart_toStartOf="parent"
 				app:layout_constraintTop_toTopOf="parent"
 				app:layout_constraintBottom_toTopOf="@id/feed_content_image_view"
