conversation creating on first message sent

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -82,7 +82,7 @@
 				android:lineSpacingExtra="10sp"
 				android:paddingStart="@dimen/general_margin_16"
 				android:paddingEnd="@dimen/general_margin_16"
-				android:text="Нет, нет, я не думаю о них. Пусть себе живут на здоровье, пусть поют себе песни, хохочут и даже целуются. Мне возвращены горы. Я люблю горы больше всего на свете. Не считая Валерки. Домбай не с чем даже сравнить. Эдем! Рай на земле, если не брать во внимание, что для рая мало одной роскошной природы. Нужны еще и определенные материальные сущности. Определенная сумма калорий на душу населения. Мало того, нужны еще и психические сущности. Душевное удовлетворение, например. Возможность заниматься тем, что тебе любо. Благосклонная улыбка синеокого ангела. Впрочем, достаточно об ангелах. Лагерь - временное обиталище людей неунывающих, шумных, энергичных. Что они не лишены юмора, в полную меру дано ощутить даже в уборной, где над известным вырезом помоста прибита вверху жестяная, в траурной кайме табличка. Она строго указует: следи за манометром! В палатке, где мне предстоит жить, на моем одеяле нарисована кем-то из предшественников символическая рожа - возможно, снежного человека, сразу не определишь. Рожа будет постоянно бодрствовать, охраняя мой сон. Что ж, ничего не имею против... Здесь нас четверо. Все молодые, от восемнадцати до двадцати пяти. В этой компании я уже перестарок. Но ничего, надеюсь, мы столкуемся. Пока я исподволь к ним присматриваюсь и прислушиваюсь."
+				android:text="TEST\nTEST\nTEST\nTEST\nTEST\nTEST\nTEST\nTEST\nTEST\nTEST\nTEST\n"
 				app:layout_constraintStart_toStartOf="parent"
 				app:layout_constraintEnd_toEndOf="parent"
 				app:layout_constraintTop_toBottomOf="@id/profile_about_header_tv"
