--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,6 @@
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
 	android:background="@color/colorPrimaryDark"
-	android:fitsSystemWindows="true"
 	tools:context=".ui.main.view.MainActivity"
 	tools:openDrawer="start"
 	xmlns:android="http://schemas.android.com/apk/res/android"
@@ -15,7 +14,8 @@
 		android:id="@+id/main_core_container"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
-		android:background="@color/colorPrimaryDark">
+		android:background="@color/colorPrimaryDark"
+		android:fitsSystemWindows="true">
 
 		<com.google.android.material.appbar.AppBarLayout
 			android:id="@+id/app_bar"
