detailed event page + images

--- a/app/src/main/res/layout/fragment_cards_item.xml
+++ b/app/src/main/res/layout/fragment_cards_item.xml
@@ -1,4 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+  ~ Created by Andrii Kovalchuk on 21.11.19 21:02
+  ~ Copyright (c) 2019. All rights reserved.
+  ~ Last modified 21.11.19 20:04
+  ~
+  ~ This Source Code Form is subject to the terms of the Mozilla Public
+  ~ License, v. 2.0. If a copy of the MPL was not distributed with this
+  ~ file, You can obtain one at https://mozilla.org/MPL/2.0/.
+  -->
+
 <layout
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto">
@@ -28,7 +38,7 @@
 			android:layout_height="match_parent"
 			android:contentDescription="@string/description_user_photo"
 			android:scaleType="centerCrop"
-			app:photoUrl="@{cardItem.mainPhotoUrl}" />
+			app:imageUrl="@{cardItem.mainPhotoUrl}" />
 
 		<LinearLayout
 
