--- a/app/src/main/res/drawable/gradient_transparent.xml
+++ b/app/src/main/res/drawable/gradient_transparent.xml
@@ -1,9 +1,20 @@
+<!--
+  ~ Created by Andrii Kovalchuk on 21.11.19 21:02
+  ~ Copyright (c) 2019. All rights reserved.
+  ~ Last modified 21.11.19 18:53
+  ~
+  ~ This Source Code Form is subject to the terms of the Mozilla Public
+  ~ License, v. 2.0. If a copy of the MPL was not distributed with this
+  ~ file, You can obtain one at https://mozilla.org/MPL/2.0/.
+  -->
+
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
 	android:shape="rectangle" >
+
 	<gradient
 		android:angle="270"
 		android:startColor="#0012121A"
-		android:endColor="#8012121A"/>
+		android:endColor="#9912121A"/>
 
 
 </shape>
