--- a/app/src/main/res/layout/fragment_places.xml
+++ b/app/src/main/res/layout/fragment_places.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-  ~ Created by Andrii Kovalchuk on 20.11.19 21:38
+  ~ Created by Andrii Kovalchuk on 22.11.19 19:36
   ~ Copyright (c) 2019. All rights reserved.
-  ~ Last modified 12.11.19 20:49
+  ~ Last modified 22.11.19 17:45
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -33,25 +33,24 @@
 		<com.google.android.material.tabs.TabItem
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:text="Popular" />
+			android:text="Bars" />
 
 		<com.google.android.material.tabs.TabItem
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:text="Latest" />
+			android:text="Restaurants" />
 
 		<com.google.android.material.tabs.TabItem
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:text="Featured" />
+			android:text="Clubs" />
 
 		<com.google.android.material.tabs.TabItem
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:text="Friends" />
+			android:text="Museums" />
 
 	</com.google.android.material.tabs.TabLayout>
-
 
 	<androidx.viewpager2.widget.ViewPager2
 		android:id="@+id/feed_vp"
