--- a/app/src/main/res/layout/fragment_cards.xml
+++ b/app/src/main/res/layout/fragment_cards.xml
@@ -1,48 +1,71 @@
-<androidx.constraintlayout.widget.ConstraintLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/colorPrimaryDark"
-    android:gravity="center"
-    android:padding="20dp"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+<?xml version="1.0" encoding="utf-8"?>
+<!--
+  ~ Created by Andrii Kovalchuk on 26.11.19 20:29
+  ~ Copyright (c) 2019. All rights reserved.
+  ~ Last modified 26.11.19 19:07
+  ~
+  ~ This Source Code Form is subject to the terms of the Mozilla Public
+  ~ License, v. 2.0. If a copy of the MPL was not distributed with this
+  ~ file, You can obtain one at https://mozilla.org/MPL/2.0/.
+  -->
 
+<layout xmlns:app="http://schemas.android.com/apk/res-auto"
+	xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:tools="http://schemas.android.com/tools">
 
-    <ImageView
-        android:id="@+id/card_loading_progress_iv"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:src="@drawable/loading"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="ContentDescription" />
+	<data>
 
-    <TextView
-	    android:id="@+id/card_helper_text_tv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+		<import type="android.view.View"/>
+
+		<variable
+			name="viewModel"
+			type="com.mmdev.roove.ui.cards.viewmodel.CardsViewModel" />
+	</data>
+
+	<androidx.constraintlayout.widget.ConstraintLayout
+	    android:layout_width="match_parent"
+	    android:layout_height="match_parent"
+	    android:background="@color/colorPrimaryDark"
 	    android:gravity="center"
-        android:text="There is no available users matching your preferences"
-	    android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-	    app:layout_constraintTop_toBottomOf="@id/card_loading_progress_iv"
-	    app:layout_constraintVertical_bias="0.3"
-	    style="@style/regular_text_white_18sp_85op"/>
+	    android:padding="20dp" >
 
-    <com.yuyakaido.android.cardstackview.CardStackView
-        android:id="@+id/card_stack_view"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:visibility="gone"
-        tools:listitem="@layout/fragment_cards_item"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+	    <ImageView
+	        android:id="@+id/card_loading_progress_iv"
+	        android:layout_width="120dp"
+	        android:layout_height="120dp"
+	        android:src="@drawable/loading"
+		    android:visibility='@{viewModel.showLoading ? View.VISIBLE : View.GONE}'
+	        app:layout_constraintBottom_toBottomOf="parent"
+	        app:layout_constraintEnd_toEndOf="parent"
+	        app:layout_constraintStart_toStartOf="parent"
+	        app:layout_constraintTop_toTopOf="parent"
+	        tools:ignore="ContentDescription" />
+
+	    <TextView
+		    android:id="@+id/card_helper_text_tv"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+		    android:gravity="center"
+	        android:text="There is no available users matching your preferences"
+		    android:visibility='@{viewModel.showTextHelper ? View.VISIBLE : View.GONE, default = "gone"}'
+	        app:layout_constraintBottom_toBottomOf="parent"
+	        app:layout_constraintEnd_toEndOf="parent"
+	        app:layout_constraintStart_toStartOf="parent"
+		    app:layout_constraintTop_toBottomOf="@id/card_loading_progress_iv"
+		    app:layout_constraintVertical_bias="0.3"
+		    style="@style/regular_text_white_18sp_85op" />
+
+	    <com.yuyakaido.android.cardstackview.CardStackView
+	        android:id="@+id/card_stack_view"
+	        android:layout_width="0dp"
+	        android:layout_height="0dp"
+		    android:visibility='@{viewModel.showLoading ? View.GONE : View.VISIBLE, default = "gone"}'
+	        tools:listitem="@layout/fragment_cards_item"
+	        app:layout_constraintStart_toStartOf="parent"
+	        app:layout_constraintEnd_toEndOf="parent"
+	        app:layout_constraintTop_toTopOf="parent"
+	        app:layout_constraintBottom_toBottomOf="parent" />
+
+	</androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
