--- a/app/src/main/res/layout/fragment_cards.xml
+++ b/app/src/main/res/layout/fragment_cards.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-  ~ Created by Andrii Kovalchuk on 26.11.19 20:29
+  ~ Created by Andrii Kovalchuk on 27.11.19 19:54
   ~ Copyright (c) 2019. All rights reserved.
-  ~ Last modified 26.11.19 19:07
+  ~ Last modified 27.11.19 18:43
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -19,7 +19,7 @@
 
 		<variable
 			name="viewModel"
-			type="com.mmdev.roove.ui.cards.viewmodel.CardsViewModel" />
+			type="com.mmdev.roove.ui.cards.CardsViewModel" />
 	</data>
 
 	<androidx.constraintlayout.widget.ConstraintLayout
