--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -1,71 +1,113 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout android:layout_width="match_parent"
-	android:layout_height="match_parent"
+<!--
+  ~ Created by Andrii Kovalchuk on 28.11.19 22:07
+  ~ Copyright (c) 2019. All rights reserved.
+  ~ Last modified 28.11.19 22:04
+  ~
+  ~ This Source Code Form is subject to the terms of the Mozilla Public
+  ~ License, v. 2.0. If a copy of the MPL was not distributed with this
+  ~ file, You can obtain one at https://mozilla.org/MPL/2.0/.
+  -->
+
+<layout xmlns:app="http://schemas.android.com/apk/res-auto"
 	xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:tools="http://schemas.android.com/tools"
-	xmlns:app="http://schemas.android.com/apk/res-auto">
+	xmlns:tools="http://schemas.android.com/tools">
 
-	<androidx.recyclerview.widget.RecyclerView
-		android:id="@+id/chat_messages_rv"
+	<data>
+
+		<import type="android.view.View"/>
+
+		<variable
+			name="viewModel"
+			type="com.mmdev.roove.ui.chat.ChatViewModel" />
+	</data>
+
+	<androidx.constraintlayout.widget.ConstraintLayout
+		android:layout_width="match_parent"
 		android:layout_height="match_parent"
-		android:layout_width="match_parent"
-		android:background="@color/colorPrimaryDark"
-		android:layout_above="@+id/content_message"
-		android:layout_alignParentTop="true"
-		android:overScrollMode="never"
-		android:scrollbars="none"
-		app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-		tools:itemCount="3"
-		tools:listitem="@layout/fragment_chat_item_left"/>
-
-	<RelativeLayout
-		android:id="@+id/content_message"
-		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
-		android:background="@color/colorAccentDark"
-		android:layout_alignParentBottom="true">
+		android:background="@color/colorPrimaryDark">
 
 		<ImageView
-			android:id="@+id/buttonAttachments"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:background="?attr/selectableItemBackgroundBorderless"
-			android:clickable="true"
-			android:focusable="true"
-			android:layout_alignParentStart="true"
-			android:layout_centerVertical="true"
-			android:layout_margin="@dimen/general_margin_16"
-			android:contentDescription="@string/fragment_chat_attach_img_description"
-			android:src="@drawable/fragment_chat_ic_attachment_24dp"/>
+			android:id="@+id/chat_loading_progress_iv"
+			android:layout_width="120dp"
+			android:layout_height="120dp"
+			android:src="@drawable/loading"
+			android:visibility='@{viewModel.showLoading ? View.VISIBLE : View.GONE}'
+			app:layout_constraintBottom_toBottomOf="parent"
+			app:layout_constraintEnd_toEndOf="parent"
+			app:layout_constraintStart_toStartOf="parent"
+			app:layout_constraintTop_toTopOf="parent"
+			tools:ignore="ContentDescription" />
 
-		<EditText
-			android:id="@+id/editTextMessage"
+		<androidx.recyclerview.widget.RecyclerView
+			android:id="@+id/chat_messages_rv"
+			android:layout_height="0dp"
+			android:layout_width="0dp"
+			android:background="@color/colorPrimaryDark"
+			android:overScrollMode="never"
+			android:scrollbars="none"
+			android:visibility='@{viewModel.showLoading ? View.GONE : View.VISIBLE, default = "gone"}'
+			app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+			app:layout_constraintStart_toStartOf="parent"
+			app:layout_constraintEnd_toEndOf="parent"
+			app:layout_constraintTop_toTopOf="parent"
+			app:layout_constraintBottom_toTopOf="@id/content_message"
+			tools:itemCount="3"
+			tools:listitem="@layout/fragment_chat_item_left"/>
+
+		<RelativeLayout
+			android:id="@+id/content_message"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
-			android:background="@null"
-			android:layout_toStartOf="@+id/buttonMessage"
-			android:layout_toEndOf="@+id/buttonAttachments"
-			android:layout_centerVertical="true"
-			android:imeOptions="actionSend"
-			android:inputType="text|textMultiLine"
-			android:hint="@string/fragment_chat_ed_hint"
-			android:textColorHint="@color/white_50"
-			tools:ignore="Autofill"
-			style="@style/regular_text_white_16sp_85op"/>
+			android:background="@color/colorAccentDark"
+			android:visibility='@{viewModel.showLoading ? View.GONE : View.VISIBLE, default = "gone"}'
+			app:layout_constraintStart_toStartOf="parent"
+			app:layout_constraintEnd_toEndOf="parent"
+			app:layout_constraintBottom_toBottomOf="parent"
+			app:layout_constraintTop_toBottomOf="@id/chat_messages_rv">
 
-		<ImageView
-			android:id="@+id/buttonMessage"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:background="?attr/selectableItemBackgroundBorderless"
-			android:clickable="true"
-			android:focusable="true"
-			android:layout_alignParentEnd="true"
-			android:layout_centerVertical="true"
-			android:layout_margin="@dimen/general_margin_16"
-			android:contentDescription="@string/fragment_chat_send_img_description"
-			android:src="@drawable/fragment_chat_ic_send_black_24dp"
-			 />
-	</RelativeLayout>
+			<ImageView
+				android:id="@+id/buttonAttachments"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:background="?attr/selectableItemBackgroundBorderless"
+				android:clickable="true"
+				android:focusable="true"
+				android:layout_alignParentStart="true"
+				android:layout_centerVertical="true"
+				android:layout_margin="@dimen/general_margin_16"
+				android:contentDescription="@string/fragment_chat_attach_img_description"
+				android:src="@drawable/fragment_chat_ic_attachment_24dp"/>
 
-</RelativeLayout>
+			<EditText
+				android:id="@+id/editTextMessage"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:background="@null"
+				android:layout_toStartOf="@+id/buttonMessage"
+				android:layout_toEndOf="@+id/buttonAttachments"
+				android:layout_centerVertical="true"
+				android:imeOptions="actionSend"
+				android:inputType="text|textMultiLine"
+				android:hint="@string/fragment_chat_ed_hint"
+				android:textColorHint="@color/white_50"
+				tools:ignore="Autofill"
+				style="@style/regular_text_white_16sp_85op"/>
+
+			<ImageView
+				android:id="@+id/buttonMessage"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:background="?attr/selectableItemBackgroundBorderless"
+				android:clickable="true"
+				android:focusable="true"
+				android:layout_alignParentEnd="true"
+				android:layout_centerVertical="true"
+				android:layout_margin="@dimen/general_margin_16"
+				android:contentDescription="@string/fragment_chat_send_img_description"
+				android:src="@drawable/fragment_chat_ic_send_black_24dp"
+				 />
+		</RelativeLayout>
+
+	</androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
