--- a/app/src/main/res/layout/fragment_cards.xml
+++ b/app/src/main/res/layout/fragment_cards.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-  ~ Created by Andrii Kovalchuk on 27.11.19 19:54
+  ~ Created by Andrii Kovalchuk on 29.11.19 16:20
   ~ Copyright (c) 2019. All rights reserved.
-  ~ Last modified 27.11.19 18:43
+  ~ Last modified 29.11.19 16:18
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -34,8 +34,8 @@
 	        android:id="@+id/card_loading_progress_iv"
 	        android:layout_width="120dp"
 	        android:layout_height="120dp"
-	        android:src="@drawable/loading"
-		    android:visibility='@{viewModel.showLoading ? View.VISIBLE : View.GONE}'
+		    android:visibility='@{viewModel.showLoading ? View.VISIBLE : View.GONE, default = "visible"}'
+		    app:loadingImage="@{true}"
 	        app:layout_constraintBottom_toBottomOf="parent"
 	        app:layout_constraintEnd_toEndOf="parent"
 	        app:layout_constraintStart_toStartOf="parent"
