--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-  ~ Created by Andrii Kovalchuk on 28.11.19 22:07
+  ~ Created by Andrii Kovalchuk on 29.11.19 16:20
   ~ Copyright (c) 2019. All rights reserved.
-  ~ Last modified 28.11.19 22:04
+  ~ Last modified 29.11.19 16:18
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -31,8 +31,8 @@
 			android:id="@+id/chat_loading_progress_iv"
 			android:layout_width="120dp"
 			android:layout_height="120dp"
-			android:src="@drawable/loading"
-			android:visibility='@{viewModel.showLoading ? View.VISIBLE : View.GONE}'
+			android:visibility='@{viewModel.showLoading ? View.VISIBLE : View.GONE, default = "visible"}'
+			app:loadingImage="@{true}"
 			app:layout_constraintBottom_toBottomOf="parent"
 			app:layout_constraintEnd_toEndOf="parent"
 			app:layout_constraintStart_toStartOf="parent"
