--- a/app/src/main/res/layout/dialog_full_screen_image.xml
+++ b/app/src/main/res/layout/dialog_full_screen_image.xml
@@ -1,35 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-  ~ Created by Andrii Kovalchuk on 29.11.19 21:45
+  ~ Created by Andrii Kovalchuk on 30.11.19 18:12
   ~ Copyright (c) 2019. All rights reserved.
-  ~ Last modified 29.11.19 18:27
+  ~ Last modified 30.11.19 18:11
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
   ~ file, You can obtain one at https://mozilla.org/MPL/2.0/.
   -->
 
-
-<androidx.constraintlayout.widget.ConstraintLayout
-	android:layout_width="match_parent"
-	android:layout_height="match_parent"
-	android:background="@color/black"
-	xmlns:tools="http://schemas.android.com/tools"
+<layout xmlns:tools="http://schemas.android.com/tools"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	xmlns:android="http://schemas.android.com/apk/res/android">
 
-		<ImageView
-			android:id="@+id/fullscreen_imageView"
-			android:layout_width="0dp"
-			android:layout_height="0dp"
-			android:adjustViewBounds="true"
-			android:scaleType="fitCenter"
-			android:src="@drawable/default_avatar"
+	<data>
+		<variable
+			name="photoUrl"
+			type="String" />
+	</data>
 
-			app:layout_constraintStart_toStartOf="parent"
-			app:layout_constraintEnd_toEndOf="parent"
-			app:layout_constraintTop_toTopOf="parent"
-			app:layout_constraintBottom_toBottomOf="parent"
-			tools:ignore="ContentDescription" />
+	<androidx.constraintlayout.widget.ConstraintLayout
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		android:background="@color/black">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+			<ImageView
+				android:id="@+id/fullscreen_imageView"
+				android:layout_width="match_parent"
+				android:layout_height="match_parent"
+				android:adjustViewBounds="true"
+				android:scaleType="fitCenter"
+				app:imageUrl="@{photoUrl}"
+				app:layout_constraintStart_toStartOf="parent"
+				app:layout_constraintEnd_toEndOf="parent"
+				app:layout_constraintTop_toTopOf="parent"
+				app:layout_constraintBottom_toBottomOf="parent"
+				tools:ignore="ContentDescription" />
+
+	</androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
